set up typeorm auto migration gen, and set up many to one relation with post and user
